minor typo update

--- a/projects/monsterproject.html
+++ b/projects/monsterproject.html
@@ -63,7 +63,7 @@
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Peprment</h2>
                         <p class="col-12 col-md-10 text-center mt-0 mb-4">
-                            Peprment is a “pestey”-eating monster who lives in “my backyard” and “paly socer.”
+                            Peprment is a “pestey”-eating monster who lives in “my backyard” and likes to “paly socer.”
                         </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12 image-shadow"
